# xgovw

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: test.yaml
src/: main.rs
xgovw-lint/: Cargo.toml
xgovw-lint-js/: Cargo.toml
xgovw-lint-js/src/: lib.rs
xgovw-lint/src/: lib.rs  lints.rs
xgovw-lint/src/lints/: preamble.rs
xgovw-lint/src/lints/markdown/: link_status.rs
xgovw-lint/src/lints/preamble/: author.rs  email.rs  file_name.rs  length.rs  require_referenced.rs  requires_status.rs
xgovw-lint/src/reporters/json/: LICENSE-APACHE
