[workspace]
members = [ "xgovw-lint", "xgovw-lint-js" ]

[package]
name = "xgovw"
description = "Algorand Request For Comments linter"
version = "0.2.2"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.60"
repository = "https://github.com/algorandfoundation/xgovw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = "0.9.1"
tokio = { version = "1.19.2", features = [ "fs", "macros", "rt-multi-thread" ] }
clap = { version = "3.2.8", features = [ "derive" ] }
xgovw-lint = { version = "0.1.0", path = "xgovw-lint", features = [ "tokio" ] }
serde_json = "1.0.81"

[patch.crates-io.comrak]
git = "https://github.com/SamWilsn/comrak.git"
branch = "inline-line-numbers"
